fixed scrollbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,120 +11,17 @@ body {
   overflow-x: hidden;
 }
 
-html.has-scroll-smooth {
-  overflow: hidden; 
-}
-
-html.has-scroll-dragging {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; 
-}
-
-.has-scroll-smooth body {
-  overflow: hidden; 
-}
-
-.has-scroll-smooth [data-scroll-container] {
-  min-height: 100vh; 
-}
-
-[data-scroll-direction="horizontal"] [data-scroll-container] {
-  height: 100vh;
-  display: inline-block;
-  white-space: nowrap; 
-}
-
-[data-scroll-direction="horizontal"] [data-scroll-section] {
-  display: inline-block;
-  vertical-align: top;
-  white-space: nowrap;
-  height: 100%; 
-}
-
-.c-scrollbar {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 11px;
-  height: 100vh;
-  transform-origin: center right;
-  transition: transform 0.3s, opacity 0.3s;
-  opacity: 0; 
-}
-
-  .c-scrollbar:hover {
-    transform: scaleX(1.45); 
-}
-
-  .c-scrollbar:hover, .has-scroll-scrolling .c-scrollbar, .has-scroll-dragging .c-scrollbar {
-    opacity: 1; 
-}
-
-[data-scroll-direction="horizontal"] .c-scrollbar {
-    width: 100%;
-    height: 10px;
-    top: auto;
-    bottom: 0;
-    transform: scaleY(1); 
-}
-
-[data-scroll-direction="horizontal"] .c-scrollbar:hover {
-      transform: scaleY(1.3); 
-}
-
-.c-scrollbar_thumb {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: black;
-  opacity: 0.5;
-  width: 7px;
-  border-radius: 10px;
-  margin: 2px;
-  cursor: -webkit-grab;
-  cursor: grab; 
-}
-  .has-scroll-dragging .c-scrollbar_thumb {
-    cursor: -webkit-grabbing;
-    cursor: grabbing; 
-}
-  [data-scroll-direction="horizontal"] .c-scrollbar_thumb {
-    right: auto;
-    bottom: 0; 
-}
-
 .wrapper {
   width: 100%;
-  height: 30000px;
+  height: 17000px;
   position: relative;
   justify-content: start !important;
   color: var(--color-text-accent);
-  // opacity: 1;
-  // visibility: inherit;
-  // overflow: hidden;
-  // outline: none;
-}
-
-.wrapper-1 {
-  width: 100%;
-  height: fit-content;
-  margin-top: 50px;
-  // position: absolute;
-  // top: 0;
 }
 
 .scroll-content {
-  // min-height: 100vh;
   display: flex;
   flex-direction: column;
-}
-
-.app {
-  width: 100%;
-  // min-height: 100vh;
-  overflow: scroll;
 }
 
 [data-scrollbar] {
@@ -134,6 +31,7 @@ html.has-scroll-dragging {
 
 .scroll-content {
   width: 100%;
+  height: 100vh;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
   display: flex;
@@ -167,6 +65,7 @@ html.has-scroll-dragging {
   left: 0;
   width: 100%;
   height: 4px;
+  display: none !important;
 }
 
 .scrollbar-track-y {
